# skytemple-ssb-debugger

./: .gitignore  MANIFEST.in  Makefile  NOTES_DEBUGGER_REWRITE  README.rst  build-blp-to-ui.ps1  build-blp-to-ui.sh  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-test-publish.yml  codeql-analysis.yml
installer/: .gitignore  README.rst  _build.sh  project.config  requirements-stage-2.txt  requirements.txt  ssb-debugger.nsi  ssb-debugger.spec
skytemple_ssb_debugger/: controls.glade  debugger.glade  emulator_thread.py  exps.lang  main.py  ssbs.lang  threadsafe.py  ui_util.py
skytemple_ssb_debugger/context/: abstract.py  standalone.py
skytemple_ssb_debugger/controller/: __init__.py  code_editor.py  debug_overlay.py  debugger.py  editor_notebook.py  global_state.py  ground_state.py  local_variable.py  main.py  script_editor.py  ssb_editor.glade  ssb_editor.py  variable.py
skytemple_ssb_debugger/controller/desmume_control_ui/: PyDeSmuMe_controls.glade  __init__.py  joystick_controls.py  keyboard_controls.py
skytemple_ssb_debugger/data/icons/hicolor/: convert_scalable.py
skytemple_ssb_debugger/dungeon/: README.rst
skytemple_ssb_debugger/dungeon/controller/: dungeon_state_controller.py
skytemple_ssb_debugger/dungeon/model/: __init__.py  dungeon_state.py  entity.py  field.py  map.py
skytemple_ssb_debugger/dungeon/model/entity_ext/: item.py  monster.py  trap.py
skytemple_ssb_debugger/dungeon/pixbuf/: __init__.py  full_map.py  small_map_icons.py
skytemple_ssb_debugger/model/: address_container.py  breakpoint_file_state.py  breakpoint_manager.py  breakpoint_state.py  constants.py  editor_text_mark_util.py  game_variable.py  ground_engine_state.py  script_runtime_struct.py  settings.py
skytemple_ssb_debugger/model/completion/: constants.py  exps_statements.py  functions.py  util.py
skytemple_ssb_debugger/model/completion/calltips/: calltip_emitter.py  position_mark.py  string_event_emitter.py
skytemple_ssb_debugger/model/ground_state/: __init__.py  actor.py  event.py  global_script.py  loaded_ssb_file.py  loaded_ssx_file.py  map.py  object.py  performer.py  ssb_file_in_ram.py  ssx_file_in_ram.py
skytemple_ssb_debugger/model/script_file_context/: __init__.py  abstract.py  exps_macro.py  ssb_file.py
skytemple_ssb_debugger/model/ssb_files/: __init__.py  explorerscript.py  file.py  file_manager.py  ssb_script.py
skytemple_ssb_debugger/pixbuf/: breakpoint_icon.py  icons.py
skytemple_ssb_debugger/renderer/: __init__.py  async_software.py
skytemple_ssb_debugger/sandbox/: __init__.py  sandbox.py  sandbox_add_delete.py  sandbox_dungeon_data.py  sandbox_memory_probe.py  sandbox_script_state.py  sandbox_ssb_pointers.py
skytemple_ssb_debugger/widget/: application.py  application_window.py
