[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "skytemple-ssb-debugger"
version = "2.0.0b1"
authors = [
    {name = 'Marco "Capypara" Köpcke', email = "hello@capypara.de"},
    # see About dialog or GitHub contributors list for additional people.
]
description = "Script Engine Debugger for Pokémon Mystery Dungeon Explorers of Sky"
readme = "README.rst"
requires-python = ">=3.10"
keywords = ["rom-hacking", "game-modding", "skytemple", "gtk"]
license = {text = "GPL-3.0-or-later"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "ndspy >= 3.0.0",
    "skytemple-files >= 1.8.2, < 1.9.0",
    "pmdsky-debug-py",  #  Whatever version skytemple-files requires.
    "skytemple-icons >= 0.1.0",
    "range-typed-integers >= 1.0.0",
    "pygobject >= 3.48.0",
    "pycairo >= 1.16.0",
    "skytemple-ssb-emulator >= 1.8.0, < 1.9.0",
    "explorerscript >= 0.2.1",
    "nest-asyncio >= 1.4.1",
    "pygtkspellcheck >= 5.0"
]

[project.urls]
Homepage = "https://skytemple.org"
Announcements = "https://blog.skytemple.org"
Documentation = "https://wiki.skytemple.org"
Repository = "https://github.com/SkyTemple/skytemple-ssb-debugger.git"
Issues = "https://github.com/SkyTemple/skytemple-ssb-debugger/issues"
Discord = "https://discord.gg/skytemple"

[project.scripts]
skytemple-ssb-debugger = "skytemple_ssb_debugger.main:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [ "W", "E", "F"]
ignore = [
  "E402",  # Module level import not at top of file -> gi imports may come after gi.require_version.
  "E501",  # Line too long. Maybe enable later.
  "F841",  # Unused variable: f-string magic
]
